--- a/vercel.json
+++ b/vercel.json
@@ -11,34 +11,13 @@
   },
   "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
+        "source": "/:all*",
+        "headers": [
         {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400, immutable"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
+            "key": "Cache-Control",
+            "value": "public,max-age=31536000,immutable"
         }
-      ]
-    },
-    {
-      "source": "/(.+\\.(js|css|jpg|jpeg|png|gif|ico|svg|webp))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+        ]
     }
-  ]
+    ]
 } 
